sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| ------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [availableServiceTiersListByWorkspaceSample.ts][availableservicetierslistbyworkspacesample] | Gets the available service tiers for the workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesAvailableServiceTiers.json                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [clustersCreateOrUpdateSample.ts][clusterscreateorupdatesample]                             | Create or update a Log Analytics cluster. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [clustersDeleteSample.ts][clustersdeletesample]                                             | Deletes a cluster instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [clustersGetSample.ts][clustersgetsample]                                                   | Gets a Log Analytics cluster instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [clustersListByResourceGroupSample.ts][clusterslistbyresourcegroupsample]                   | Gets Log Analytics clusters in a resource group. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [clustersListSample.ts][clusterslistsample]                                                 | Gets the Log Analytics clusters in a subscription. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [clustersUpdateSample.ts][clustersupdatesample]                                             | Updates a Log Analytics cluster. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/ClustersUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [dataExportsCreateOrUpdateSample.ts][dataexportscreateorupdatesample]                       | Create or update a data export. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataExportCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [dataExportsDeleteSample.ts][dataexportsdeletesample]                                       | Deletes the specified data export in a given workspace.. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataExportDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [dataExportsGetSample.ts][dataexportsgetsample]                                             | Gets a data export instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataExportGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [dataExportsListByWorkspaceSample.ts][dataexportslistbyworkspacesample]                     | Lists the data export instances within a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataExportListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [dataSourcesCreateOrUpdateSample.ts][datasourcescreateorupdatesample]                       | Create or update a data source. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataSourcesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [dataSourcesDeleteSample.ts][datasourcesdeletesample]                                       | Deletes a data source instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataSourcesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [dataSourcesGetSample.ts][datasourcesgetsample]                                             | Gets a datasource instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataSourcesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [dataSourcesListByWorkspaceSample.ts][datasourceslistbyworkspacesample]                     | Gets the first page of data source instances in a workspace with the link to the next page. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/DataSourcesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                 |
| [deletedWorkspacesListByResourceGroupSample.ts][deletedworkspaceslistbyresourcegroupsample] | Gets recently deleted workspaces in a resource group, available for recovery. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                            |
| [deletedWorkspacesListSample.ts][deletedworkspaceslistsample]                               | Gets recently deleted workspaces in a subscription, available for recovery. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [gatewaysDeleteSample.ts][gatewaysdeletesample]                                             | Delete a Log Analytics gateway. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesGatewaysDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [intelligencePacksDisableSample.ts][intelligencepacksdisablesample]                         | Disables an intelligence pack for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesDisableIntelligencePack.json                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [intelligencePacksEnableSample.ts][intelligencepacksenablesample]                           | Enables an intelligence pack for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesEnableIntelligencePack.json                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [intelligencePacksListSample.ts][intelligencepackslistsample]                               | Lists all the intelligence packs possible and whether they are enabled or disabled for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesListIntelligencePacks.json                                                                                                                                                                                                                                                                                                                                                                              |
| [linkedServicesCreateOrUpdateSample.ts][linkedservicescreateorupdatesample]                 | Create or update a linked service. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedServicesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [linkedServicesDeleteSample.ts][linkedservicesdeletesample]                                 | Deletes a linked service instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedServicesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [linkedServicesGetSample.ts][linkedservicesgetsample]                                       | Gets a linked service instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedServicesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [linkedServicesListByWorkspaceSample.ts][linkedserviceslistbyworkspacesample]               | Gets the linked services instances in a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedServicesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [linkedStorageAccountsCreateOrUpdateSample.ts][linkedstorageaccountscreateorupdatesample]   | Create or Update a link relation between current workspace and a group of storage accounts of a specific data source type. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedStorageAccountsCreate.json                                                                                                                                                                                                                                                                                                                                                                 |
| [linkedStorageAccountsDeleteSample.ts][linkedstorageaccountsdeletesample]                   | Deletes all linked storage accounts of a specific data source type associated with the specified workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedStorageAccountsDelete.json                                                                                                                                                                                                                                                                                                                                                                                |
| [linkedStorageAccountsGetSample.ts][linkedstorageaccountsgetsample]                         | Gets all linked storage account of a specific data source type associated with the specified workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedStorageAccountsGet.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [linkedStorageAccountsListByWorkspaceSample.ts][linkedstorageaccountslistbyworkspacesample] | Gets all linked storage accounts associated with the specified workspace, storage accounts will be sorted by their data source type. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/LinkedStorageAccountsListByWorkspace.json                                                                                                                                                                                                                                                                                                                                              |
| [managementGroupsListSample.ts][managementgroupslistsample]                                 | Gets a list of management groups connected to a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesListManagementGroups.json                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [operationStatusesGetSample.ts][operationstatusesgetsample]                                 | Get the status of a long running azure asynchronous operation. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/OperationStatusesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [operationsListSample.ts][operationslistsample]                                             | Lists all of the available OperationalInsights Rest API operations. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-10-01/examples/OperationsListByTenant.json                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [savedSearchesCreateOrUpdateSample.ts][savedsearchescreateorupdatesample]                   | Creates or updates a saved search for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesSavedSearchesCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [savedSearchesDeleteSample.ts][savedsearchesdeletesample]                                   | Deletes the specified saved search in a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesDeleteSavedSearches.json                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [savedSearchesGetSample.ts][savedsearchesgetsample]                                         | Gets the specified saved search for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesSavedSearchesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [savedSearchesListByWorkspaceSample.ts][savedsearcheslistbyworkspacesample]                 | Gets the saved searches for a given Log Analytics Workspace x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/SavedSearchesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [schemaGetSample.ts][schemagetsample]                                                       | Gets the schema for a given workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/SavedSearchesGetSchema.json                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [sharedKeysGetSharedKeysSample.ts][sharedkeysgetsharedkeyssample]                           | Gets the shared keys for a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesGetSharedKeys.json                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [sharedKeysRegenerateSample.ts][sharedkeysregeneratesample]                                 | Regenerates the shared keys for a Log Analytics Workspace. These keys are used to connect Microsoft Operational Insights agents to the workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesRegenerateSharedKeys.json                                                                                                                                                                                                                                                                                                                                       |
| [storageInsightConfigsCreateOrUpdateSample.ts][storageinsightconfigscreateorupdatesample]   | Create or update a storage insight. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/StorageInsightsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [storageInsightConfigsDeleteSample.ts][storageinsightconfigsdeletesample]                   | Deletes a storageInsightsConfigs resource x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/StorageInsightsDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [storageInsightConfigsGetSample.ts][storageinsightconfigsgetsample]                         | Gets a storage insight instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/StorageInsightsGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [storageInsightConfigsListByWorkspaceSample.ts][storageinsightconfigslistbyworkspacesample] | Lists the storage insight instances within a workspace x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/StorageInsightsListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [tablesCreateSample.ts][tablescreatesample]                                                 | Updates a Log Analytics workspace table properties. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/TablesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [tablesGetSample.ts][tablesgetsample]                                                       | Gets a Log Analytics workspace table. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/TablesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [tablesListByWorkspaceSample.ts][tableslistbyworkspacesample]                               | Gets all the tables for the specified Log Analytics workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/TablesList.json                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [tablesUpdateSample.ts][tablesupdatesample]                                                 | Updates a Log Analytics workspace table properties. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/TablesUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [usagesListSample.ts][usageslistsample]                                                     | Gets a list of usage metrics for a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesListUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [workspacePurgeGetPurgeStatusSample.ts][workspacepurgegetpurgestatussample]                 | Gets status of an ongoing purge operation. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesPurgeOperation.json                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [workspacePurgeSample.ts][workspacepurgesample]                                             | Purges data in an Log Analytics workspace by a set of user-defined filters. //@@TS-MAGIC-NEWLINE@@ In order to manage system resources, purge requests are throttled at 50 requests per hour. You should batch the execution of purge requests by sending a single command whose predicate includes all user identities that require purging. Use the in operator to specify multiple identities. You should run the query prior to using for a purge request to verify that the results are expected. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2020-08-01/examples/WorkspacesPurge.json |
| [workspacesCreateOrUpdateSample.ts][workspacescreateorupdatesample]                         | Create or update a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [workspacesDeleteSample.ts][workspacesdeletesample]                                         | Deletes a workspace resource. To recover the workspace, create it again with the same name, in the same subscription, resource group and location. The name is kept for 14 days and cannot be used for another workspace. To remove the workspace completely and release the name, use the force flag. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesDelete.json                                                                                                                                                                                                |
| [workspacesGetSample.ts][workspacesgetsample]                                               | Gets a workspace instance. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [workspacesListByResourceGroupSample.ts][workspaceslistbyresourcegroupsample]               | Gets workspaces in a resource group. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [workspacesListSample.ts][workspaceslistsample]                                             | Gets the workspaces in a subscription. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [workspacesUpdateSample.ts][workspacesupdatesample]                                         | Updates a workspace. x-ms-original-file: specification/operationalinsights/resource-manager/Microsoft.OperationalInsights/stable/2021-06-01/examples/WorkspacesUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://nodejs.org/about/releases/).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/availableServiceTiersListByWorkspaceSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node dist/availableServiceTiersListByWorkspaceSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[availableservicetierslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/availableServiceTiersListByWorkspaceSample.ts
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/clustersCreateOrUpdateSample.ts
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/clustersDeleteSample.ts
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/clustersGetSample.ts
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/clustersListByResourceGroupSample.ts
[clusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/clustersListSample.ts
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/clustersUpdateSample.ts
[dataexportscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/dataExportsCreateOrUpdateSample.ts
[dataexportsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/dataExportsDeleteSample.ts
[dataexportsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/dataExportsGetSample.ts
[dataexportslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/dataExportsListByWorkspaceSample.ts
[datasourcescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/dataSourcesCreateOrUpdateSample.ts
[datasourcesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/dataSourcesDeleteSample.ts
[datasourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/dataSourcesGetSample.ts
[datasourceslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/dataSourcesListByWorkspaceSample.ts
[deletedworkspaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/deletedWorkspacesListByResourceGroupSample.ts
[deletedworkspaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/deletedWorkspacesListSample.ts
[gatewaysdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/gatewaysDeleteSample.ts
[intelligencepacksdisablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/intelligencePacksDisableSample.ts
[intelligencepacksenablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/intelligencePacksEnableSample.ts
[intelligencepackslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/intelligencePacksListSample.ts
[linkedservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/linkedServicesCreateOrUpdateSample.ts
[linkedservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/linkedServicesDeleteSample.ts
[linkedservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/linkedServicesGetSample.ts
[linkedserviceslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/linkedServicesListByWorkspaceSample.ts
[linkedstorageaccountscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/linkedStorageAccountsCreateOrUpdateSample.ts
[linkedstorageaccountsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/linkedStorageAccountsDeleteSample.ts
[linkedstorageaccountsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/linkedStorageAccountsGetSample.ts
[linkedstorageaccountslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/linkedStorageAccountsListByWorkspaceSample.ts
[managementgroupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/managementGroupsListSample.ts
[operationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/operationStatusesGetSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/operationsListSample.ts
[savedsearchescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/savedSearchesCreateOrUpdateSample.ts
[savedsearchesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/savedSearchesDeleteSample.ts
[savedsearchesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/savedSearchesGetSample.ts
[savedsearcheslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/savedSearchesListByWorkspaceSample.ts
[schemagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/schemaGetSample.ts
[sharedkeysgetsharedkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/sharedKeysGetSharedKeysSample.ts
[sharedkeysregeneratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/sharedKeysRegenerateSample.ts
[storageinsightconfigscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/storageInsightConfigsCreateOrUpdateSample.ts
[storageinsightconfigsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/storageInsightConfigsDeleteSample.ts
[storageinsightconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/storageInsightConfigsGetSample.ts
[storageinsightconfigslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/storageInsightConfigsListByWorkspaceSample.ts
[tablescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/tablesCreateSample.ts
[tablesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/tablesGetSample.ts
[tableslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/tablesListByWorkspaceSample.ts
[tablesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/tablesUpdateSample.ts
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/usagesListSample.ts
[workspacepurgegetpurgestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/workspacePurgeGetPurgeStatusSample.ts
[workspacepurgesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/workspacePurgeSample.ts
[workspacescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/workspacesCreateOrUpdateSample.ts
[workspacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/workspacesDeleteSample.ts
[workspacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/workspacesGetSample.ts
[workspaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/workspacesListByResourceGroupSample.ts
[workspaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/workspacesListSample.ts
[workspacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v8/typescript/src/workspacesUpdateSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-operationalinsights?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/operationalinsights/arm-operationalinsights/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
