sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/README.md
# @azure/arm-operationalinsights client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-operationalinsights in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [availableServiceTiersListByWorkspaceSample.ts][availableservicetierslistbyworkspacesample] | gets the available service tiers for the workspace. x-ms-original-file: 2026-03-01/WorkspacesAvailableServiceTiers.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [clustersCreateOrUpdateSample.ts][clusterscreateorupdatesample]                             | create or update a Log Analytics cluster. x-ms-original-file: 2026-03-01/ClustersCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [clustersDeleteSample.ts][clustersdeletesample]                                             | deletes a cluster instance. x-ms-original-file: 2026-03-01/ClustersDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [clustersGetSample.ts][clustersgetsample]                                                   | gets a Log Analytics cluster instance. x-ms-original-file: 2026-03-01/ClustersGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [clustersListByResourceGroupSample.ts][clusterslistbyresourcegroupsample]                   | gets Log Analytics clusters in a resource group. x-ms-original-file: 2026-03-01/ClustersListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [clustersListSample.ts][clusterslistsample]                                                 | gets the Log Analytics clusters in a subscription. x-ms-original-file: 2026-03-01/ClustersSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [clustersUpdateSample.ts][clustersupdatesample]                                             | updates a Log Analytics cluster. x-ms-original-file: 2026-03-01/ClustersUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [dataExportsCreateOrUpdateSample.ts][dataexportscreateorupdatesample]                       | create or update a data export. x-ms-original-file: 2026-03-01/DataExportCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [dataExportsDeleteSample.ts][dataexportsdeletesample]                                       | deletes the specified data export in a given workspace.. x-ms-original-file: 2026-03-01/DataExportDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [dataExportsGetSample.ts][dataexportsgetsample]                                             | gets a data export instance. x-ms-original-file: 2026-03-01/DataExportGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [dataExportsListByWorkspaceSample.ts][dataexportslistbyworkspacesample]                     | lists the data export instances within a workspace. x-ms-original-file: 2026-03-01/DataExportListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [dataSourcesCreateOrUpdateSample.ts][datasourcescreateorupdatesample]                       | create or update a data source. x-ms-original-file: 2026-03-01/DataSourcesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [dataSourcesDeleteSample.ts][datasourcesdeletesample]                                       | deletes a data source instance. x-ms-original-file: 2026-03-01/DataSourcesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [dataSourcesGetSample.ts][datasourcesgetsample]                                             | gets a datasource instance. x-ms-original-file: 2026-03-01/DataSourcesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [dataSourcesListByWorkspaceSample.ts][datasourceslistbyworkspacesample]                     | gets the first page of data source instances in a workspace with the link to the next page. x-ms-original-file: 2026-03-01/DataSourcesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [deletedWorkspacesListByResourceGroupSample.ts][deletedworkspaceslistbyresourcegroupsample] | gets recently deleted workspaces in a resource group, available for recovery. x-ms-original-file: 2026-03-01/WorkspacesListByResourceGroupForDeleted.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [deletedWorkspacesListSample.ts][deletedworkspaceslistsample]                               | gets recently deleted workspaces in a subscription, available for recovery. x-ms-original-file: 2026-03-01/WorkspacesSubscriptionList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [gatewaysDeleteSample.ts][gatewaysdeletesample]                                             | delete a Log Analytics gateway. x-ms-original-file: 2026-03-01/WorkspacesGatewaysDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [intelligencePacksDisableSample.ts][intelligencepacksdisablesample]                         | disables an intelligence pack for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesDisableIntelligencePack.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [intelligencePacksEnableSample.ts][intelligencepacksenablesample]                           | enables an intelligence pack for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesEnableIntelligencePack.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [intelligencePacksListSample.ts][intelligencepackslistsample]                               | lists all the intelligence packs possible and whether they are enabled or disabled for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesListIntelligencePacks.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [linkedServicesCreateOrUpdateSample.ts][linkedservicescreateorupdatesample]                 | create or update a linked service. x-ms-original-file: 2026-03-01/LinkedServicesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [linkedServicesDeleteSample.ts][linkedservicesdeletesample]                                 | deletes a linked service instance. x-ms-original-file: 2026-03-01/LinkedServicesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [linkedServicesGetSample.ts][linkedservicesgetsample]                                       | gets a linked service instance. x-ms-original-file: 2026-03-01/LinkedServicesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [linkedServicesListByWorkspaceSample.ts][linkedserviceslistbyworkspacesample]               | gets the linked services instances in a workspace. x-ms-original-file: 2026-03-01/LinkedServicesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [linkedStorageAccountsCreateOrUpdateSample.ts][linkedstorageaccountscreateorupdatesample]   | create or Update a link relation between current workspace and a group of storage accounts of a specific data source type. x-ms-original-file: 2026-03-01/LinkedStorageAccountsCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [linkedStorageAccountsDeleteSample.ts][linkedstorageaccountsdeletesample]                   | deletes all linked storage accounts of a specific data source type associated with the specified workspace. x-ms-original-file: 2026-03-01/LinkedStorageAccountsDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [linkedStorageAccountsGetSample.ts][linkedstorageaccountsgetsample]                         | gets all linked storage account of a specific data source type associated with the specified workspace. x-ms-original-file: 2026-03-01/LinkedStorageAccountsGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [linkedStorageAccountsListByWorkspaceSample.ts][linkedstorageaccountslistbyworkspacesample] | gets all linked storage accounts associated with the specified workspace, storage accounts will be sorted by their data source type. x-ms-original-file: 2026-03-01/LinkedStorageAccountsListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [managementGroupsListSample.ts][managementgroupslistsample]                                 | gets a list of management groups connected to a workspace. x-ms-original-file: 2026-03-01/WorkspacesListManagementGroups.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [operationStatusesGetSample.ts][operationstatusesgetsample]                                 | get the status of a long running azure asynchronous operation. x-ms-original-file: 2026-03-01/OperationStatusesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [operationsListSample.ts][operationslistsample]                                             | lists all of the available OperationalInsights Rest API operations. x-ms-original-file: 2026-03-01/OperationsListByTenant.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [queriesDeleteSample.ts][queriesdeletesample]                                               | deletes a specific Query defined within an Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [queriesGetSample.ts][queriesgetsample]                                                     | gets a specific Log Analytics Query defined within a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [queriesListSample.ts][querieslistsample]                                                   | gets a list of Queries defined within a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [queriesListSearchSample.ts][querieslistsearchsample]                                       | search a list of Queries defined within a Log Analytics QueryPack according to given search properties. x-ms-original-file: 2026-03-01/QueryPackQueriesSearch.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [queriesPutSample.ts][queriesputsample]                                                     | adds or Updates a specific Query within a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesPut.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [queriesUpdateSample.ts][queriesupdatesample]                                               | adds or Updates a specific Query within a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPackQueriesUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [queryPacksCreateOrUpdateSample.ts][querypackscreateorupdatesample]                         | creates (or updates) a Log Analytics QueryPack. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: 2026-03-01/QueryPacksCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [queryPacksCreateOrUpdateWithoutNameSample.ts][querypackscreateorupdatewithoutnamesample]   | creates a Log Analytics QueryPack. Note: You cannot specify a different value for InstrumentationKey nor AppId in the Put operation. x-ms-original-file: 2026-03-01/QueryPackUpdateNoName.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [queryPacksDeleteSample.ts][querypacksdeletesample]                                         | deletes a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPacksDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [queryPacksGetSample.ts][querypacksgetsample]                                               | returns a Log Analytics QueryPack. x-ms-original-file: 2026-03-01/QueryPacksGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [queryPacksListByResourceGroupSample.ts][querypackslistbyresourcegroupsample]               | gets a list of Log Analytics QueryPacks within a resource group. x-ms-original-file: 2026-03-01/QueryPacksListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [queryPacksListSample.ts][querypackslistsample]                                             | gets a list of all Log Analytics QueryPacks within a subscription. x-ms-original-file: 2026-03-01/QueryPacksList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [queryPacksUpdateTagsSample.ts][querypacksupdatetagssample]                                 | updates an existing QueryPack's tags. To update other fields use the CreateOrUpdate method. x-ms-original-file: 2026-03-01/QueryPacksUpdateTagsOnly.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [savedSearchesCreateOrUpdateSample.ts][savedsearchescreateorupdatesample]                   | creates or updates a saved search for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesSavedSearchesCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [savedSearchesDeleteSample.ts][savedsearchesdeletesample]                                   | deletes the specified saved search in a given workspace. x-ms-original-file: 2026-03-01/WorkspacesDeleteSavedSearches.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [savedSearchesGetSample.ts][savedsearchesgetsample]                                         | gets the specified saved search for a given workspace. x-ms-original-file: 2026-03-01/WorkspacesSavedSearchesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [savedSearchesListByWorkspaceSample.ts][savedsearcheslistbyworkspacesample]                 | gets the saved searches for a given Log Analytics Workspace x-ms-original-file: 2026-03-01/SavedSearchesListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [schemaGetSample.ts][schemagetsample]                                                       | gets the schema for a given workspace. x-ms-original-file: 2026-03-01/SavedSearchesGetSchema.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [sharedKeysGetSharedKeysSample.ts][sharedkeysgetsharedkeyssample]                           | gets the shared keys for a workspace. x-ms-original-file: 2026-03-01/WorkspacesGetSharedKeys.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [sharedKeysRegenerateSample.ts][sharedkeysregeneratesample]                                 | regenerates the shared keys for a Log Analytics Workspace. These keys are used to connect Microsoft Operational Insights agents to the workspace. x-ms-original-file: 2026-03-01/WorkspacesRegenerateSharedKeys.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [storageInsightConfigsCreateOrUpdateSample.ts][storageinsightconfigscreateorupdatesample]   | create or update a storage insight. x-ms-original-file: 2026-03-01/StorageInsightsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [storageInsightConfigsDeleteSample.ts][storageinsightconfigsdeletesample]                   | deletes a storageInsightsConfigs resource x-ms-original-file: 2026-03-01/StorageInsightsDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [storageInsightConfigsGetSample.ts][storageinsightconfigsgetsample]                         | gets a storage insight instance. x-ms-original-file: 2026-03-01/StorageInsightsGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [storageInsightConfigsListByWorkspaceSample.ts][storageinsightconfigslistbyworkspacesample] | lists the storage insight instances within a workspace x-ms-original-file: 2026-03-01/StorageInsightsListByWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [summaryLogsCreateOrUpdateSample.ts][summarylogscreateorupdatesample]                       | creates or updates Log Analytics workspace Summary rules. x-ms-original-file: 2026-03-01/SummaryLogsUpsert.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [summaryLogsDeleteSample.ts][summarylogsdeletesample]                                       | deletes Log Analytics workspace Summary rules. x-ms-original-file: 2026-03-01/SummaryLogsDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [summaryLogsGetSample.ts][summarylogsgetsample]                                             | gets Log Analytics workspace Summary rules. x-ms-original-file: 2026-03-01/SummaryLogsGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [summaryLogsListByWorkspaceSample.ts][summarylogslistbyworkspacesample]                     | gets all summary rules for the specified Log Analytics workspace. x-ms-original-file: 2026-03-01/SummaryLogsList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [summaryLogsRetryBinSample.ts][summarylogsretrybinsample]                                   | retries a failed Summary rule bin. x-ms-original-file: 2026-03-01/SummaryLogsRetryBin.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [summaryLogsStartSample.ts][summarylogsstartsample]                                         | starts an inactive Summary rule. x-ms-original-file: 2026-03-01/SummaryLogsStart.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [summaryLogsStopSample.ts][summarylogsstopsample]                                           | stops an active Summary rule. x-ms-original-file: 2026-03-01/SummaryLogsStop.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [tablesCancelSearchSample.ts][tablescancelsearchsample]                                     | cancel a log analytics workspace search results table query run. x-ms-original-file: 2026-03-01/TablesSearchCancel.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [tablesCreateOrUpdateSample.ts][tablescreateorupdatesample]                                 | update or Create a Log Analytics workspace table. x-ms-original-file: 2026-03-01/TablesUpsertForTable.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [tablesDeleteSample.ts][tablesdeletesample]                                                 | delete a Log Analytics workspace table. x-ms-original-file: 2026-03-01/TablesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [tablesGetSample.ts][tablesgetsample]                                                       | gets a Log Analytics workspace table. x-ms-original-file: 2026-03-01/TablesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [tablesListByWorkspaceSample.ts][tableslistbyworkspacesample]                               | gets all the tables for the specified Log Analytics workspace. x-ms-original-file: 2026-03-01/TablesList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [tablesMigrateSample.ts][tablesmigratesample]                                               | migrate a Log Analytics table from support of the Data Collector API and Custom Fields features to support of Data Collection Rule-based Custom Logs. x-ms-original-file: 2026-03-01/TablesMigrate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [tablesUpdateSample.ts][tablesupdatesample]                                                 | update a Log Analytics workspace table. x-ms-original-file: 2026-03-01/TablesUpsert.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [usagesListSample.ts][usageslistsample]                                                     | gets a list of usage metrics for a workspace. x-ms-original-file: 2026-03-01/WorkspacesListUsages.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [workspacePurgeGetPurgeStatusSample.ts][workspacepurgegetpurgestatussample]                 | gets status of an ongoing purge operation. x-ms-original-file: 2026-03-01/WorkspacesPurgeLakeDataOperation.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [workspacePurgePurgeLakeDataSample.ts][workspacepurgepurgelakedatasample]                   | purges data lake data in a Log Analytics workspace for a table over a specified time range. This operation deletes data lake data (Auxiliary tables, or Analytics tables mirrored to the data lake) for the specified table within the given time range. The operation is long-running; poll the URL returned in the Azure-AsyncOperation response header to track its status. x-ms-original-file: 2026-03-01/WorkspacesPurgeLakeData.json                                                                                                                                                                                                                                                                                                                                                                               |
| [workspacePurgePurgeSample.ts][workspacepurgepurgesample]                                   | purges data in an Log Analytics workspace by a set of user-defined filters. In order to manage system resources, purge requests are throttled at 50 requests per hour. You should batch the execution of purge requests by sending a single command whose predicate includes all user identities that require purging. Use the in operator to specify multiple identities. You should run the query prior to using for a purge request to verify that the results are expected. Log Analytics only supports purge operations required for compliance with GDPR. The Log Analytics product team reserves the right to reject requests for purge operations that are not for the purpose of GDPR compliance. In the event of a dispute, please create a support ticket x-ms-original-file: 2026-03-01/WorkspacesPurge.json |
| [workspacesCreateOrUpdateSample.ts][workspacescreateorupdatesample]                         | create or update a workspace. x-ms-original-file: 2026-03-01/WorkspacesCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [workspacesDeleteSample.ts][workspacesdeletesample]                                         | deletes a workspace resource. To recover the workspace, create it again with the same name, in the same subscription, resource group and location. The name is kept for 14 days and cannot be used for another workspace. To remove the workspace completely and release the name, use the force flag. x-ms-original-file: 2026-03-01/WorkspacesDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [workspacesFailbackSample.ts][workspacesfailbacksample]                                     | deactivates failover for the specified workspace. The failback operation is asynchronous and can take up to 30 minutes to complete. The status of the operation can be checked using the operationId returned in the response. x-ms-original-file: 2026-03-01/WorkspacesFailback.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [workspacesFailoverSample.ts][workspacesfailoversample]                                     | activates failover for the specified workspace. The specified replication location must match the location of the enabled replication for this workspace. The failover operation is asynchronous and can take up to 30 minutes to complete. The status of the operation can be checked using the operationId returned in the response. x-ms-original-file: 2026-03-01/WorkspacesFailover.json                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [workspacesGetNSPSample.ts][workspacesgetnspsample]                                         | gets a network security perimeter configuration. x-ms-original-file: 2026-03-01/NSPForWorkspaces_Get.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [workspacesGetSample.ts][workspacesgetsample]                                               | gets a workspace instance. x-ms-original-file: 2026-03-01/WorkspacesGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [workspacesListByResourceGroupSample.ts][workspaceslistbyresourcegroupsample]               | gets workspaces in a resource group. x-ms-original-file: 2026-03-01/WorkspacesListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [workspacesListNSPSample.ts][workspaceslistnspsample]                                       | gets a list of NSP configurations for specified workspace. x-ms-original-file: 2026-03-01/NSPForWorkspaces_List.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [workspacesListSample.ts][workspaceslistsample]                                             | gets the workspaces in a subscription. x-ms-original-file: 2026-03-01/WorkspacesSubscriptionListForWorkSpace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [workspacesReconcileNSPSample.ts][workspacesreconcilenspsample]                             | reconcile network security perimeter configuration for Workspace resource. x-ms-original-file: 2026-03-01/NSPForWorkspaces_Reconcile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [workspacesUpdateSample.ts][workspacesupdatesample]                                         | updates a workspace. x-ms-original-file: 2026-03-01/WorkspacesUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/availableServiceTiersListByWorkspaceSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/availableServiceTiersListByWorkspaceSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[availableservicetierslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/availableServiceTiersListByWorkspaceSample.ts
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/clustersCreateOrUpdateSample.ts
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/clustersDeleteSample.ts
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/clustersGetSample.ts
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/clustersListByResourceGroupSample.ts
[clusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/clustersListSample.ts
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/clustersUpdateSample.ts
[dataexportscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/dataExportsCreateOrUpdateSample.ts
[dataexportsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/dataExportsDeleteSample.ts
[dataexportsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/dataExportsGetSample.ts
[dataexportslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/dataExportsListByWorkspaceSample.ts
[datasourcescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/dataSourcesCreateOrUpdateSample.ts
[datasourcesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/dataSourcesDeleteSample.ts
[datasourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/dataSourcesGetSample.ts
[datasourceslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/dataSourcesListByWorkspaceSample.ts
[deletedworkspaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/deletedWorkspacesListByResourceGroupSample.ts
[deletedworkspaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/deletedWorkspacesListSample.ts
[gatewaysdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/gatewaysDeleteSample.ts
[intelligencepacksdisablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/intelligencePacksDisableSample.ts
[intelligencepacksenablesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/intelligencePacksEnableSample.ts
[intelligencepackslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/intelligencePacksListSample.ts
[linkedservicescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/linkedServicesCreateOrUpdateSample.ts
[linkedservicesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/linkedServicesDeleteSample.ts
[linkedservicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/linkedServicesGetSample.ts
[linkedserviceslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/linkedServicesListByWorkspaceSample.ts
[linkedstorageaccountscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/linkedStorageAccountsCreateOrUpdateSample.ts
[linkedstorageaccountsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/linkedStorageAccountsDeleteSample.ts
[linkedstorageaccountsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/linkedStorageAccountsGetSample.ts
[linkedstorageaccountslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/linkedStorageAccountsListByWorkspaceSample.ts
[managementgroupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/managementGroupsListSample.ts
[operationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/operationStatusesGetSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/operationsListSample.ts
[queriesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queriesDeleteSample.ts
[queriesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queriesGetSample.ts
[querieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queriesListSample.ts
[querieslistsearchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queriesListSearchSample.ts
[queriesputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queriesPutSample.ts
[queriesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queriesUpdateSample.ts
[querypackscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queryPacksCreateOrUpdateSample.ts
[querypackscreateorupdatewithoutnamesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queryPacksCreateOrUpdateWithoutNameSample.ts
[querypacksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queryPacksDeleteSample.ts
[querypacksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queryPacksGetSample.ts
[querypackslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queryPacksListByResourceGroupSample.ts
[querypackslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queryPacksListSample.ts
[querypacksupdatetagssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/queryPacksUpdateTagsSample.ts
[savedsearchescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/savedSearchesCreateOrUpdateSample.ts
[savedsearchesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/savedSearchesDeleteSample.ts
[savedsearchesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/savedSearchesGetSample.ts
[savedsearcheslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/savedSearchesListByWorkspaceSample.ts
[schemagetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/schemaGetSample.ts
[sharedkeysgetsharedkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/sharedKeysGetSharedKeysSample.ts
[sharedkeysregeneratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/sharedKeysRegenerateSample.ts
[storageinsightconfigscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/storageInsightConfigsCreateOrUpdateSample.ts
[storageinsightconfigsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/storageInsightConfigsDeleteSample.ts
[storageinsightconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/storageInsightConfigsGetSample.ts
[storageinsightconfigslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/storageInsightConfigsListByWorkspaceSample.ts
[summarylogscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/summaryLogsCreateOrUpdateSample.ts
[summarylogsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/summaryLogsDeleteSample.ts
[summarylogsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/summaryLogsGetSample.ts
[summarylogslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/summaryLogsListByWorkspaceSample.ts
[summarylogsretrybinsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/summaryLogsRetryBinSample.ts
[summarylogsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/summaryLogsStartSample.ts
[summarylogsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/summaryLogsStopSample.ts
[tablescancelsearchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/tablesCancelSearchSample.ts
[tablescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/tablesCreateOrUpdateSample.ts
[tablesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/tablesDeleteSample.ts
[tablesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/tablesGetSample.ts
[tableslistbyworkspacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/tablesListByWorkspaceSample.ts
[tablesmigratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/tablesMigrateSample.ts
[tablesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/tablesUpdateSample.ts
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/usagesListSample.ts
[workspacepurgegetpurgestatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacePurgeGetPurgeStatusSample.ts
[workspacepurgepurgelakedatasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacePurgePurgeLakeDataSample.ts
[workspacepurgepurgesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacePurgePurgeSample.ts
[workspacescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesCreateOrUpdateSample.ts
[workspacesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesDeleteSample.ts
[workspacesfailbacksample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesFailbackSample.ts
[workspacesfailoversample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesFailoverSample.ts
[workspacesgetnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesGetNSPSample.ts
[workspacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesGetSample.ts
[workspaceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesListByResourceGroupSample.ts
[workspaceslistnspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesListNSPSample.ts
[workspaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesListSample.ts
[workspacesreconcilenspsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesReconcileNSPSample.ts
[workspacesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/operationalinsights/arm-operationalinsights/samples/v11/typescript/src/workspacesUpdateSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-operationalinsights
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/operationalinsights/arm-operationalinsights/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
